Fixed image size on mobile.

--- a/shared/css/helpers.css
+++ b/shared/css/helpers.css
@@ -42,3 +42,7 @@
 .w-100 {
   width: 100%;
 }
+
+.img-fluid{
+  max-width: 100%;
+}
